--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="clear">Очистить</string>
     <string name="exchange">Рассчитать стоимость в долларах США/евро</string>
     <string name="Info">Инфо</string>
+    <string name="share">Поделиться</string>
+    <string name="send_pricing">Отправить расчет</string>
 </resources>
